--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.14",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {},
